--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gh-pages": "^2.0.0",
+    "homepage": "https://mvproduction.github.io/gmp-lab-template-front-end.github.io/",
     "lodash": "^4.17.11",
     "react": "^16.5.2",
     "react-awesome-slider": "^0.5.2",
@@ -19,6 +21,8 @@
     "tachyons": "^4.11.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
