--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.5.2",
     "react-awesome-slider": "^0.5.2",
     "react-bootstrap": "^0.32.4",
+    "react-collapse": "^4.0.3",
     "react-dom": "^16.5.2",
+    "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "react-tilt": "^0.1.4",
